mdmCeneveo/src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_c__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule__c</fullName>
        <label>Billing Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi - Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CVA_Discount__c</fullName>
        <label>CVA Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CVA_Rebate__c</fullName>
        <label>CVA Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_T_and_C_Type__c</fullName>
        <label>Contract T and C Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Price_Increase__c</fullName>
        <label>General Price Increase</label>
        <picklist>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_Increases__c</fullName>
        <label>Material Increases</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Contract_Date__c</fullName>
        <label>Original Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_By_Customer__c</fullName>
        <label>Received By Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Service Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1% 10 Days, Net 30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1% 15 Days, Net 30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2% 10 Days, Net 60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2% 15 Days, Net 30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% 30 Days, Net 60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash in Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Cash 60 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>AW = Article Works
Comp = Composition
C-Shop = Ecommerce Service
ISS Reprint = Intercontinental Subscription Services
RR = Rapid Review
CVA = Conversion Value Add</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Print AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Print RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Print RR / AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp RR / AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS Reprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print On Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication Fee Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RR Print</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>